--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "jquery": "^3.7.1",
+    "lightbox2": "^2.11.5",
     "vue": "^3.5.18"
   },
   "devDependencies": {
