--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "jquery": "^3.7.1",
     "lightbox2": "^2.11.5",
     "vue": "^3.5.20",
