--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "axios": "^1.12.2",
     "jquery": "^3.7.1",
     "lightbox2": "^2.11.5",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "vue": "^3.5.20",
     "vue-router": "^4.5.1"
   },
