docs(docker): agregar documentación completa de Docker e inicialización de base de datos
Documentación:
- Agrega DOCKER.md: guía completa de dockerización con diagramas de
arquitectura,
  instrucciones paso a paso, resolución de problemas y buenas prácticas
- Agrega DATABASE.md e INICIO_RAPIDO.md como documentación adicional del
proyecto

Configuración de Base de Datos:
- Agrega init.sql: script de inicialización del esquema PostgreSQL
- Monta init.sql en docker-compose.yml para creación automática de la
base de datos
- Agrega productsData.js: datos de productos movidos desde el frontend
para seed del backend
- Actualiza seedProducts.js:
  * Corrige la ruta de importación para usar productsData.js local
  * Agrega logs en consola para mejor visibilidad del proceso de seed
  * Agrega estadísticas resumidas al final

Esto permite la configuración automática de la base de datos al iniciar
los contenedores Docker
y proporciona documentación completa para los desarrolladores.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       #- "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./backend/bd/init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - capygaming-network
     healthcheck:
