feat(api): agrega middleware de seguridad para webhooks
- Implementar validación de firma HMAC-SHA256
- Verificar los encabezados x-signature y x-request-id
- Agregar validación de IP para los webhooks de MercadoPago
- Incluir protección con limitación de solicitudes (rate limiting)
- Soporte para modos de desarrollo y producción

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,13 +1,34 @@
-# .env.example
-# Configuración de Base de Datos
-DB_USER=tu_usuario_de_postgres_aqui
-DB_HOST=localhost
-DB_NAME=nombre_de_tu_base_de_datos
-DB_PASSWORD=tu_password_de_postgres_aqui
+# Variables de entorno para Docker Compose
+
+# Base de datos
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=admin
+POSTGRES_DB=capygaming
+
+# Backend
+NODE_ENV=production
+PORT=3001
+DB_USER=postgres
+DB_HOST=db
+DB_NAME=capygaming
+DB_PASSWORD=admin
 DB_PORT=5432
+FRONTEND_URL=http://localhost
 
 # Configuración de Autenticación JWT
-JWT_SECRET=tu_clave_secreta_super_segura_minimo_32_caracteres_aqui
+JWT_SECRET= ...
 
 # Configuración del Servidor
 PORT=3001
+TEST_VARIABLE=funciona
+
+# Configuración de Mercado Pago
+MERCADOPAGO_ACCESS_TOKEN=...
+MERCADOPAGO_PUBLIC_KEY=...
+
+# Webhook Security (se obtiene del panel de MercadoPago)
+MERCADOPAGO_WEBHOOK_SECRET=tu-webhook-secret-aqui
+
+# URLs de la aplicación (para redirecciones de MP)
+FRONTEND_URL=http://localhost:5173
+BACKEND_URL=http://localhost:3001
