chore(docker): agregar variables de entorno para MercadoPago
Se agregan variables necesarias para la integración con MercadoPago en
el contenedor del backend.

Variables agregadas:
- BACKEND_URL: URL del backend (usada para webhooks con ngrok)
- MERCADOPAGO_ACCESS_TOKEN: Token de acceso de MercadoPago
- MERCADOPAGO_PUBLIC_KEY: Clave pública de MercadoPago
- MERCADOPAGO_WEBHOOK_SECRET: Secreto para validar firma de webhooks
- ALLOW_UNSIGNED_WEBHOOKS: Flag para permitir webhooks sin firma en
desarrollo

Archivo modificado:
- docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,11 @@ services:
       DB_PORT: ${DB_PORT}
       JWT_SECRET: ${JWT_SECRET}
       FRONTEND_URL: ${FRONTEND_URL}
+      BACKEND_URL: ${BACKEND_URL}
+      MERCADOPAGO_ACCESS_TOKEN: ${MERCADOPAGO_ACCESS_TOKEN}
+      MERCADOPAGO_PUBLIC_KEY: ${MERCADOPAGO_PUBLIC_KEY}
+      MERCADOPAGO_WEBHOOK_SECRET: ${MERCADOPAGO_WEBHOOK_SECRET}
+      ALLOW_UNSIGNED_WEBHOOKS: ${ALLOW_UNSIGNED_WEBHOOKS}
     ports:
       - "3001:3001"
     networks:
