--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "vue": "^3.5.20",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "nodemailer": "^6.9.7"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
