--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,3 @@
 # VITE_API_URL no es necesaria porque usamos rutas relativas (/api)
 # que nginx redirige al backend mediante proxy
-# VITE_API_URL=http://backend:3001
+ VITE_API_URL=https://capygaming-backend.onrender.com
