--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -19,11 +19,14 @@ RUN npm run build
 # Etapa de producción con nginx
 FROM nginx:alpine
 
+# Argumento para elegir qué archivo nginx usar (por defecto local)
+ARG NGINX_CONF=nginx.conf
+
 # Copiar los archivos construidos desde la etapa anterior
 COPY --from=build /app/dist /usr/share/nginx/html
 
 # Copiar configuración personalizada de nginx
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY ${NGINX_CONF} /etc/nginx/conf.d/default.conf
 
 # Exponer puerto 80
 EXPOSE 80
