--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -4,12 +4,18 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # Proxy para el API
-    server {
-    listen 80;
-    server_name localhost;
-    root /usr/share/nginx/html;
-    index index.html;
+    # Proxy para el API (Docker local)
+    location /api/ {
+        proxy_pass http://backend:3001/api/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+    }
 
     # SPA - todas las rutas van a index.html
     location / {
@@ -17,18 +23,6 @@ server {
     }
 
     # Cache para assets estáticos
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-    }
-}
-    
-    # Para Vue Router en modo history
-    location / {
-        try_files $uri $uri/ /index.html;
-    }
-
-    # Cachear archivos estáticos
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
