--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,3 @@
-VITE_API_URL=https://capygaming-backend.onrender.com
+# Variables de entorno para producción
+# En Docker local: Sin VITE_API_URL para usar rutas relativas /api (nginx hace proxy)
+# En Render: Configurar VITE_API_URL como variable de entorno en el dashboard
